# LlamaDroid

./: README.md  settings.gradle.kts
.github/workflows/: debug-apk-release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_engine.cpp  llama_engine.h  llama_jni.cpp  llama_types.h
app/src/main/java/com/llamadroid/: LlamaDroidApp.kt  MainActivity.kt
app/src/main/java/com/llamadroid/app/: AppDispatchers.kt  AppGraph.kt
app/src/main/java/com/llamadroid/data/chat/: ChatRepository.kt
app/src/main/java/com/llamadroid/data/db/: ChatDao.kt  Entities.kt  LlamaDatabase.kt  ModelDao.kt
app/src/main/java/com/llamadroid/data/model/: ModelRepository.kt
app/src/main/java/com/llamadroid/data/settings/: SettingsRepository.kt
app/src/main/java/com/llamadroid/domain/chat/: ChatModels.kt  ChatUseCases.kt  PromptBuilder.kt
app/src/main/java/com/llamadroid/domain/inference/: InferenceModels.kt
app/src/main/java/com/llamadroid/domain/model/: ModelModels.kt  ModelUseCases.kt
app/src/main/java/com/llamadroid/domain/settings/: SettingsModels.kt
app/src/main/java/com/llamadroid/nativebridge/: LlamaEngine.kt  LlamaNativeBindings.kt  LlamaNativeEngine.kt
app/src/main/java/com/llamadroid/ui/benchmark/: BenchmarkScreen.kt
app/src/main/res/drawable/: ic_launcher.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
gradle/: libs.versions.toml
(+9 files in other folders)
